base.core/src/main/java/eapli/base/grammarutils/QuestionnaireGrammarParser.java
// Generated from /home/pico/Documents/ISEP/LAPR4/lei21_22_s4_2dj_3/base.core/QuestionnaireGrammar.g4 by ANTLR 4.10.1
package eapli.base.grammarutils;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuestionnaireGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QUESTIONNAIRE_ID=1, SECTION_DELIMITER=2, OBLIGATORINESS_TITLE=3, OBLIGATORINESS_OPTIONS=4, 
		QUETION_DELIMITER1=5, QUETION_DELIMITER2=6, INSTRUCTION_TITLE=7, TYPE_TITLE=8, 
		SELECTION_TYPE_TITLE=9, TABLE_TYPE_TITLE=10, TABLE_DELIMITER=11, END_TABLE_DELIMITER=12, 
		INSERTION_TYPE_TITLE=13, ANSWER_TITLE=14, TITLE=15, WORD=16, NUMBER=17, 
		SPACE=18, END_SENTENCE_PUNCTUATION=19, PUNCTUATION=20, DELIMITERS=21, 
		SPECIAL_CHARACTERS=22, NEWLINE=23, SENTENCE=24;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_questionnaire_structure = 2, RULE_questionnaire_introduction_message = 3, 
		RULE_questionnaire_end_message = 4, RULE_section_structure = 5, RULE_section_description = 6, 
		RULE_question_structure = 7, RULE_obligatoriness_field = 8, RULE_repeatability_field = 9, 
		RULE_extra_info_field = 10, RULE_instruction_field = 11, RULE_type_field = 12, 
		RULE_selection_type = 13, RULE_table_type = 14, RULE_insertion_type = 15, 
		RULE_option_list = 16, RULE_option_item = 17, RULE_table = 18, RULE_table_row = 19, 
		RULE_entry = 20, RULE_end_entry = 21, RULE_answer = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "start", "questionnaire_structure", "questionnaire_introduction_message", 
			"questionnaire_end_message", "section_structure", "section_description", 
			"question_structure", "obligatoriness_field", "repeatability_field", 
			"extra_info_field", "instruction_field", "type_field", "selection_type", 
			"table_type", "insertion_type", "option_list", "option_item", "table", 
			"table_row", "entry", "end_entry", "answer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'Obligatoriness'", null, "'{'", "'}'", "'Instructions'", 
			"'Type'", null, null, null, "'|]'", null, "'Answer'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "QUESTIONNAIRE_ID", "SECTION_DELIMITER", "OBLIGATORINESS_TITLE", 
			"OBLIGATORINESS_OPTIONS", "QUETION_DELIMITER1", "QUETION_DELIMITER2", 
			"INSTRUCTION_TITLE", "TYPE_TITLE", "SELECTION_TYPE_TITLE", "TABLE_TYPE_TITLE", 
			"TABLE_DELIMITER", "END_TABLE_DELIMITER", "INSERTION_TYPE_TITLE", "ANSWER_TITLE", 
			"TITLE", "WORD", "NUMBER", "SPACE", "END_SENTENCE_PUNCTUATION", "PUNCTUATION", 
			"DELIMITERS", "SPECIAL_CHARACTERS", "NEWLINE", "SENTENCE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuestionnaireGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuestionnaireGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			start();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public Questionnaire_structureContext questionnaire_structure() {
			return getRuleContext(Questionnaire_structureContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			questionnaire_structure();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Questionnaire_structureContext extends ParserRuleContext {
		public Questionnaire_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionnaire_structure; }
	 
		public Questionnaire_structureContext() { }
		public void copyFrom(Questionnaire_structureContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QuestionnaireContext extends Questionnaire_structureContext {
		public TerminalNode QUESTIONNAIRE_ID() { return getToken(QuestionnaireGrammarParser.QUESTIONNAIRE_ID, 0); }
		public TerminalNode TITLE() { return getToken(QuestionnaireGrammarParser.TITLE, 0); }
		public Questionnaire_introduction_messageContext questionnaire_introduction_message() {
			return getRuleContext(Questionnaire_introduction_messageContext.class,0);
		}
		public Questionnaire_end_messageContext questionnaire_end_message() {
			return getRuleContext(Questionnaire_end_messageContext.class,0);
		}
		public List<Section_structureContext> section_structure() {
			return getRuleContexts(Section_structureContext.class);
		}
		public Section_structureContext section_structure(int i) {
			return getRuleContext(Section_structureContext.class,i);
		}
		public QuestionnaireContext(Questionnaire_structureContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterQuestionnaire(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitQuestionnaire(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitQuestionnaire(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Questionnaire_structureContext questionnaire_structure() throws RecognitionException {
		Questionnaire_structureContext _localctx = new Questionnaire_structureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questionnaire_structure);
		int _la;
		try {
			_localctx = new QuestionnaireContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(QUESTIONNAIRE_ID);
			setState(51);
			match(TITLE);
			setState(52);
			questionnaire_introduction_message();
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(53);
				section_structure();
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER );
			setState(58);
			questionnaire_end_message();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Questionnaire_introduction_messageContext extends ParserRuleContext {
		public Questionnaire_introduction_messageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionnaire_introduction_message; }
	 
		public Questionnaire_introduction_messageContext() { }
		public void copyFrom(Questionnaire_introduction_messageContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntroductionMessageContext extends Questionnaire_introduction_messageContext {
		public List<TerminalNode> SENTENCE() { return getTokens(QuestionnaireGrammarParser.SENTENCE); }
		public TerminalNode SENTENCE(int i) {
			return getToken(QuestionnaireGrammarParser.SENTENCE, i);
		}
		public IntroductionMessageContext(Questionnaire_introduction_messageContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterIntroductionMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitIntroductionMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitIntroductionMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Questionnaire_introduction_messageContext questionnaire_introduction_message() throws RecognitionException {
		Questionnaire_introduction_messageContext _localctx = new Questionnaire_introduction_messageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_questionnaire_introduction_message);
		int _la;
		try {
			_localctx = new IntroductionMessageContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				match(SENTENCE);
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SENTENCE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Questionnaire_end_messageContext extends ParserRuleContext {
		public Questionnaire_end_messageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionnaire_end_message; }
	 
		public Questionnaire_end_messageContext() { }
		public void copyFrom(Questionnaire_end_messageContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EndMessageContext extends Questionnaire_end_messageContext {
		public TerminalNode TITLE() { return getToken(QuestionnaireGrammarParser.TITLE, 0); }
		public List<TerminalNode> SENTENCE() { return getTokens(QuestionnaireGrammarParser.SENTENCE); }
		public TerminalNode SENTENCE(int i) {
			return getToken(QuestionnaireGrammarParser.SENTENCE, i);
		}
		public EndMessageContext(Questionnaire_end_messageContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterEndMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitEndMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitEndMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Questionnaire_end_messageContext questionnaire_end_message() throws RecognitionException {
		Questionnaire_end_messageContext _localctx = new Questionnaire_end_messageContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_questionnaire_end_message);
		int _la;
		try {
			_localctx = new EndMessageContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(TITLE);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				match(SENTENCE);
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SENTENCE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Section_structureContext extends ParserRuleContext {
		public Section_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section_structure; }
	 
		public Section_structureContext() { }
		public void copyFrom(Section_structureContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SectionContext extends Section_structureContext {
		public TerminalNode NUMBER() { return getToken(QuestionnaireGrammarParser.NUMBER, 0); }
		public TerminalNode SECTION_DELIMITER() { return getToken(QuestionnaireGrammarParser.SECTION_DELIMITER, 0); }
		public TerminalNode TITLE() { return getToken(QuestionnaireGrammarParser.TITLE, 0); }
		public Section_descriptionContext section_description() {
			return getRuleContext(Section_descriptionContext.class,0);
		}
		public Obligatoriness_fieldContext obligatoriness_field() {
			return getRuleContext(Obligatoriness_fieldContext.class,0);
		}
		public Repeatability_fieldContext repeatability_field() {
			return getRuleContext(Repeatability_fieldContext.class,0);
		}
		public List<Question_structureContext> question_structure() {
			return getRuleContexts(Question_structureContext.class);
		}
		public Question_structureContext question_structure(int i) {
			return getRuleContext(Question_structureContext.class,i);
		}
		public SectionContext(Section_structureContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Section_structureContext section_structure() throws RecognitionException {
		Section_structureContext _localctx = new Section_structureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_section_structure);
		int _la;
		try {
			_localctx = new SectionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(NUMBER);
			setState(72);
			match(SECTION_DELIMITER);
			setState(73);
			match(TITLE);
			setState(74);
			section_description();
			setState(75);
			obligatoriness_field();
			setState(76);
			repeatability_field();
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				question_structure();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==QUETION_DELIMITER1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Section_descriptionContext extends ParserRuleContext {
		public Section_descriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section_description; }
	 
		public Section_descriptionContext() { }
		public void copyFrom(Section_descriptionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SectionDescriptionContext extends Section_descriptionContext {
		public List<TerminalNode> SENTENCE() { return getTokens(QuestionnaireGrammarParser.SENTENCE); }
		public TerminalNode SENTENCE(int i) {
			return getToken(QuestionnaireGrammarParser.SENTENCE, i);
		}
		public SectionDescriptionContext(Section_descriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterSectionDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitSectionDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitSectionDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Section_descriptionContext section_description() throws RecognitionException {
		Section_descriptionContext _localctx = new Section_descriptionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_section_description);
		int _la;
		try {
			_localctx = new SectionDescriptionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENTENCE) {
				{
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(82);
					match(SENTENCE);
					}
					}
					setState(85); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SENTENCE );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Question_structureContext extends ParserRuleContext {
		public Question_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_structure; }
	 
		public Question_structureContext() { }
		public void copyFrom(Question_structureContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QuestionContext extends Question_structureContext {
		public TerminalNode QUETION_DELIMITER1() { return getToken(QuestionnaireGrammarParser.QUETION_DELIMITER1, 0); }
		public TerminalNode NUMBER() { return getToken(QuestionnaireGrammarParser.NUMBER, 0); }
		public TerminalNode QUETION_DELIMITER2() { return getToken(QuestionnaireGrammarParser.QUETION_DELIMITER2, 0); }
		public TerminalNode SENTENCE() { return getToken(QuestionnaireGrammarParser.SENTENCE, 0); }
		public Instruction_fieldContext instruction_field() {
			return getRuleContext(Instruction_fieldContext.class,0);
		}
		public Obligatoriness_fieldContext obligatoriness_field() {
			return getRuleContext(Obligatoriness_fieldContext.class,0);
		}
		public Extra_info_fieldContext extra_info_field() {
			return getRuleContext(Extra_info_fieldContext.class,0);
		}
		public Type_fieldContext type_field() {
			return getRuleContext(Type_fieldContext.class,0);
		}
		public AnswerContext answer() {
			return getRuleContext(AnswerContext.class,0);
		}
		public QuestionContext(Question_structureContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_structureContext question_structure() throws RecognitionException {
		Question_structureContext _localctx = new Question_structureContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_question_structure);
		int _la;
		try {
			_localctx = new QuestionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(QUETION_DELIMITER1);
			setState(90);
			match(NUMBER);
			setState(91);
			match(QUETION_DELIMITER2);
			setState(92);
			match(SENTENCE);
			setState(93);
			instruction_field();
			setState(94);
			obligatoriness_field();
			setState(95);
			extra_info_field();
			setState(96);
			type_field();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ANSWER_TITLE) {
				{
				setState(97);
				answer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Obligatoriness_fieldContext extends ParserRuleContext {
		public Obligatoriness_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligatoriness_field; }
	 
		public Obligatoriness_fieldContext() { }
		public void copyFrom(Obligatoriness_fieldContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ObligatorinessFieldContext extends Obligatoriness_fieldContext {
		public TerminalNode OBLIGATORINESS_TITLE() { return getToken(QuestionnaireGrammarParser.OBLIGATORINESS_TITLE, 0); }
		public TerminalNode OBLIGATORINESS_OPTIONS() { return getToken(QuestionnaireGrammarParser.OBLIGATORINESS_OPTIONS, 0); }
		public ObligatorinessFieldContext(Obligatoriness_fieldContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterObligatorinessField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitObligatorinessField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitObligatorinessField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Obligatoriness_fieldContext obligatoriness_field() throws RecognitionException {
		Obligatoriness_fieldContext _localctx = new Obligatoriness_fieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_obligatoriness_field);
		try {
			_localctx = new ObligatorinessFieldContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(OBLIGATORINESS_TITLE);
			setState(101);
			match(OBLIGATORINESS_OPTIONS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Repeatability_fieldContext extends ParserRuleContext {
		public Repeatability_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatability_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterRepeatability_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitRepeatability_field(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitRepeatability_field(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Repeatability_fieldContext repeatability_field() throws RecognitionException {
		Repeatability_fieldContext _localctx = new Repeatability_fieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_repeatability_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Extra_info_fieldContext extends ParserRuleContext {
		public Extra_info_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extra_info_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterExtra_info_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitExtra_info_field(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitExtra_info_field(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Extra_info_fieldContext extra_info_field() throws RecognitionException {
		Extra_info_fieldContext _localctx = new Extra_info_fieldContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_extra_info_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
